<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".PontuacaoActivity">

    <include
        android:id="@+id/include3"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textJogador1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        android:text="@string/jogador_1_pontuacao"
        android:textSize="36sp"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/textViewPontuacao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include3" />

    <TextView
        android:id="@+id/textViewPontuacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        android:text="@string/pontuacao_numero_jogador1"
        android:textSize="70sp"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutButton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textJogador1" />

    <LinearLayout
        android:id="@+id/linearLayoutButton1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textJogador2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPontuacao">

        <ImageButton
            android:id="@+id/btRemoveJogador1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/botaoPadrao"
            app:srcCompat="@drawable/ic_remover_branco_24"
            android:contentDescription="@string/bt_remover_pontuacao_1" />

        <ImageButton
            android:id="@+id/btAdicionaJogador1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/botaoPadrao"
            app:srcCompat="@drawable/ic_add_branco_24"
            android:contentDescription="@string/adicionar_pontuacao_1" />
    </LinearLayout>

    <TextView
        android:id="@+id/textJogador2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/jogador_2_pontuacao"
        android:textSize="36sp"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/textViewPontuacao2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutButton1" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textJogador2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutButton1" />

    <TextView
        android:id="@+id/textViewPontuacao2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/background_light"
        android:text="@string/numero_pontuacao_jogador2"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textJogador2" />

    <LinearLayout
        android:id="@+id/linearLayoutButton2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPontuacao2">

        <ImageButton
            android:id="@+id/btRemoveJogador2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/botaoPadrao"
            app:srcCompat="@drawable/ic_remover_branco_24"
            android:contentDescription="@string/remover_pontuacao_jogador2" />

        <ImageButton
            android:id="@+id/btAdicionaJogador2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/botaoPadrao"
            app:srcCompat="@drawable/ic_add_branco_24"
            android:contentDescription="@string/adicionar_pontuacao_jogador2" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>