<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"></include>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/editPrimeiroJogador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/primeiro_jogador_main"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editPontuacaoInicialJogado1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pontuacao_jogador_1_main"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="number" />

            <EditText
                android:id="@+id/editSegundoJogador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/segundo_jogador_main"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editPontuacaoInicialJogador2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pontuacao_jogador_2_main"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonComecar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="validarDados"
            android:text="Começar"
            android:theme="@style/botaoPadrao" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>